Bug 1544150 - add new operator'%' to handle modular by TimeUnit. r=jya

As operator`%` would need to handle `TimeUnit` as a input as well, we add new operator function.

Also use `int64` as a input parameter for another two operator functions `%` and `/` in order to add assertion to ensure that the input won't overflow.

Differential Revision: https://phabricator.services.mozilla.com/D27644